Fix line-clamp: remove display -moz-box that was overriding -webkit-box and breaking truncation

--- a/applications/static/ui/default/css/dashboard-v2.css
+++ b/applications/static/ui/default/css/dashboard-v2.css
@@ -140,13 +140,10 @@ body {
     font-size: 1.1rem;
     line-height: 1.3em;
     min-height: calc(1.3em * 2);
-    max-height: calc(1.3em * 2 + 4px + 12px);
     overflow: hidden;
     display: -webkit-box;
-    display: -moz-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
     text-align: left;
     word-break: break-all;
 }
